--- a/StemNetBluetoothClientApp/StemNetBluetoothClientApp/MainPage.xaml
+++ b/StemNetBluetoothClientApp/StemNetBluetoothClientApp/MainPage.xaml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:viewmodel="clr-namespace:StemNetBluetoothClientApp.ViewModel"
+             x:DataType="viewmodel:MainViewModel"
              x:Class="StemNetBluetoothClientApp.MainPage">
 
     <ScrollView>
@@ -15,9 +17,10 @@
                 HeightRequest="200"
                 HorizontalOptions="Center" />
 
+            <!--Text="Press 'Connect Now' to attempt connection."-->
             <Label
                 x:Name="OutputLbl"
-                Text="Press 'Connect Now' to attempt connection."
+                Text="{Binding Text}"
                 SemanticProperties.HeadingLevel="Level1"
                 FontSize="32"
                 HorizontalOptions="Center" />
